this is a project on django i am doing for HPCL Information Systems Center Hyderabad!

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,11 +25,17 @@
     font-family:monospace;
 }
 
-input[type=text]{
+input{
+
     padding: 10px ;
     border-radius: 10px;
     background-color: transparent;
     display: grid;
 
 
+}
+
+#calender{
+    padding: 5px;
+    display:inline;
 }
