--- a/hpemployee/templates/hpemployee/homepage.html
+++ b/hpemployee/templates/hpemployee/homepage.html
@@ -1,18 +1,38 @@
-<!DOCTYPE html>
+{%load static from staticfiles %}
+<!DOCTYPE HTML>
 <html lang="en" dir="ltr">
-  <head>
+
+    <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>This is the employee login page</h1>
-     <div class="employees">
-       {%for var in key%}
-       <div class="seconddiv">
-         <h2>{{var.employee_name}}</h2>
-         <h3>{{var.location}}</h3>
-       </div>
-       {%endfor%}
-     </div>
-  </body>
+        <title>homepage</title>
+      <link href="{%static 'style.css'%}"
+      type="text/css" rel="stylesheet">
+   </head>
+
+
+    <body>
+        <div id="whole">
+        <div id="header">
+            <img src="{%static 'newheader.png'%}" width="1250px">
+
+        </div>
+        <br>
+        <br>
+        <br>
+            <div id="body">
+                <h2 align="center">
+                    LOGIN
+                </h2>
+                <div align="center">
+                <form  action="hpemployee/" method="post">
+                  {%csrf_token%}
+                  {{form}}
+                  <input type="submit" class="button" value="submit">
+
+              </form>
+            </div>
+            </div>
+        </div>
+
+    </body>
 </html>
