--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
 
 #body{
 
-    margin-top: 250px;
+
     font-family: Roboto,monospace;}
 
 .button {
@@ -20,16 +20,30 @@
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: inline;
     font-size: 16px;
     font-family:monospace;
 }
 
-input[type=text]{
+input{
+
     padding: 10px ;
     border-radius: 10px;
     background-color: transparent;
     display: grid;
 
+
+}
+
+.menue{
+  background-color:crimson;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display:inline-flex;
+  font-size: 16px;
+  font-family:monospace;
 
 }
