--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>About</title>
-  </head>
-  <body>
-    <h1>About</h1>
-    <p> this is the About page</p>
-  </body>
-</html>
+{%extends 'base.html'%}
+
+{%block body%}
+    <div id="body">
+<h1>This is the About page</h1>
+</div>
+{%endblock%}
