I had made a small mistake in the previous commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
 
             <img src="{%static 'newheader.png'%}" width="1250px">
             <div id="menue" align="center">
-            <a href="{%url 'home'%}"></a><input class="menue" type="button" name="home" value="Home">
-            <a href="{%url 'about'%}"></a><input class="menue" type="button" name="about" value="About">
-            <a href="{%url 'emp_home'%}"></a><input class="menue" type="button" name="emp_home" value="Add Employee">
-            <a href="{%url 'emp_det'%}"></a><input class="menue" type="button" name="about" value="Employee Details">
+            <a href="{%url 'home'%}"><input class="menue" type="button" name="home" value="Home"></a>
+            <a href="{%url 'about'%}"><input class="menue" type="button" name="about" value="About"></a>
+            <a href="{%url 'emp_home'%}"><input class="menue" type="button" name="emp_home" value="Add Employee"></a>
+            <a href="{%url 'emp_det'%}"><input class="menue" type="button" name="about" value="Employee Details"></a>
           </div>
         {%block body%}
 
