--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,9 @@
             <div id="menue" align="center">
             <a href="{%url 'home'%}"><input class="menue" type="button" name="home" value="Home"></a>
             <a href="{%url 'about'%}"><input class="menue" type="button" name="about" value="About"></a>
-            <a href="{%url 'emp_home'%}"><input class="menue" type="button" name="emp_home" value="Add Employee"></a>
+            <a href="{%url 'emp_home'%}"><input class="menue" type="button" name="emp_home" value="Sign Up"></a>
             <a href="{%url 'emp_det'%}"><input class="menue" type="button" name="about" value="Employee Details"></a>
+            <a href="{%url 'login'%}"><input class="menue" type="button" name="login" value="Login"></a>
           </div>
         {%block body%}
 
