successfully managed to store locationcode in sessions

--- a/hpemployee/templates/hpemployee/employeedetails.html
+++ b/hpemployee/templates/hpemployee/employeedetails.html
@@ -30,7 +30,7 @@
           <tr>
             <td>{{num2.employee_number}}</td>
             <td>{{num2.employee_name}}</td>
-            <td>{{num2.location}}</td>
+            <td>{{num2.location_code}}</td>
             <td>{{num2.DOB}}</td>
           </tr>
             {% endfor %}
