--- a/hpemployee/templates/hpemployee/employeedetails.html
+++ b/hpemployee/templates/hpemployee/employeedetails.html
@@ -3,7 +3,7 @@
 {%block body%}
   <div id="body" align="center">
     <h1>Employee Details</h1>
-    <form  action="/employee/hpemployee/" method="post" enctype="multipart/form-data">
+    <form  action="{%url 'emp_det'%}" method="post" enctype="multipart/form-data">
       {%csrf_token%}
       employee number:
     {%for num in form1%}
