--- a/hpemployee/templates/hpemployee/login.html
+++ b/hpemployee/templates/hpemployee/login.html
@@ -1,12 +1,13 @@
 {%extends 'base.html'%}
 {%block body%}
-<form class="login" action="{%url 'login'%}" method="post" enctype="multipart/form-data">
+<form class="login" action="{% url 'login' %}" method="post" enctype="multipart/form-data">
   <div align="center">
-    {%csrf_token%}
+
 
 {{form}}
+  {%csrf_token%}
 
-<input type='submit' class='button' name="login" value="Login">
+<input type='submit' class='button' name="login" value="LOGIN">
 </div>
 </form>
 
