now all the details of the employees being successfully printed

--- a/inventory/templates/inventory/invent.html
+++ b/inventory/templates/inventory/invent.html
@@ -6,7 +6,8 @@
 
     {{q1.employee_name}}<br>
     {{q1.employee_number}}<br>
-    {{q1.Email_id}}
+    {{q1.Email_id}}<br>
+    {{q1.location}}
 {%endfor%}
   </div>
   <form class="inventory" action="{%url 'invent'%}" method="post" enctype="multipart/form-data">
