--- a/inventory/templates/inventory/invent.html
+++ b/inventory/templates/inventory/invent.html
@@ -16,11 +16,9 @@
 
 <input type="submit" name="logout" value="LOGOUT" class="menue"/>
 <input type="submit" name="see_all" value="View Inventory" class="menue"/>
-{%for var in form1%}
-{{form.management_form}}
+{%for form in form1%}
+{{var.management_form}}
 {{var}}
-
-
 {%endfor%}
 <input type="submit" name="see" value="view item" class="menue"/>
 
