to make a porper working query for the formset

--- a/inventory/templates/inventory/invent.html
+++ b/inventory/templates/inventory/invent.html
@@ -16,7 +16,7 @@
 
 <input type="submit" name="logout" value="LOGOUT" class="menue"/>
 <input type="submit" name="see_all" value="View Inventory" class="menue"/>
-{%for form in form1%}
+{%for var in form1%}
 {{var.management_form}}
 {{var}}
 {%endfor%}
