added model formset to add the parent and the child through inline formset

--- a/hpemployee/templates/hpemployee/homepage.html
+++ b/hpemployee/templates/hpemployee/homepage.html
@@ -6,7 +6,7 @@
                     ADD EMPLOYEE
                 </h2>
                 <div align="center">
-                <form  action="{%url 'emp_home'%}" method="post" enctype="multipart/form-data">
+                <form class="homepage" action="{%url 'emp_home'%}" method="post" enctype="multipart/form-data">
 
 
 
