--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,8 @@ input{
     padding: 10px ;
     border-radius: 10px;
     background-color: transparent;
-    display: grid;
+    display:grid;
+
 
 
 }
@@ -55,5 +56,5 @@ input{
 .hr{
 
 
-  display:contents;
+  display:flex;
 }
