--- a/inventory/templates/inventory/invent.html
+++ b/inventory/templates/inventory/invent.html
@@ -77,15 +77,15 @@
 <br>
 <br>
 <br>------------------- ONLY FOR H.R DEPARTMENT PURPOSES------------------------<br><br><br>
-<form action="{%url 'invent'%}" method="post" enctype="multipart/form-data">
+<form class="hr" action="{%url 'invent'%}" method="post" enctype="multipart/form-data">
 {%for form in form%}
     {{form.management_form}}
     <table>
-    <tr>
-      <td>{{form}}</td>
+    <tr class="item_info">
+      <td>{{form.as_table}}</td>
     </tr>
     </table>
-
+<br>------------------------------------------------------------------------------<br>
 {%endfor%}
 {%csrf_token%}
 <input type="submit" name="update" value="update database" class="menue">
