to make the same changes as that of the previous commit

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,12 +49,16 @@ input{
   font-size: 16px;
   font-family:monospace;
   align-self: center;
-
-
 }
 
 .hr{
-
-
   display:table-row;
+}
+
+.reciept{
+  display:inline;
+}
+
+.update{
+  display:inline-flex;
 }
