successfully added a dynamic dropdown box

--- a/inventory/templates/inventory/invent.html
+++ b/inventory/templates/inventory/invent.html
@@ -90,7 +90,11 @@
     </tr>
     {%for r in f%}
     <tr>
-      <td>{{r.item_des}}</td>
+      <td>
+
+        {{r.item_des}}
+
+      </select></td>
       <td>{{r.quantity}}</td>
       <td>{{r.cost}}</td>
 
